Fixed text contrast in light mode

--- a/src/css/global-style.css
+++ b/src/css/global-style.css
@@ -3,6 +3,7 @@
     --off-white: rgb(245, 245, 245);
     --off-white-ignore: rgb(245, 245, 245);
     --dark-mode: rgb(28, 28, 28);
+    --dark-mode-ignore: rgb(28, 28, 28);
     --dark-mode-light: rgb(38, 38, 38);
     --swiper-heading-color: #333;
     --blue-nav: #4073ff;
