--- a/src/css/pages/cars/68-corvette.css
+++ b/src/css/pages/cars/68-corvette.css
@@ -17,6 +17,7 @@
 
 #car-contact-section button {
     border: solid 2px var(--corvette-color);
+    color: var(--dark-mode-ignore);
 }
 
 #sold,
